--- a/sass/styles.scss/layout/_footer.scss
+++ b/sass/styles.scss/layout/_footer.scss
@@ -80,6 +80,9 @@
     color: #ffffff;
     margin-bottom: 20px ;
     text-align: center;
+    @media screen and (min-width: 1200px) {
+        text-align: left;
+    }
 }
   
 .join-list{
