--- a/sass/styles.scss/layout/_header.scss
+++ b/sass/styles.scss/layout/_header.scss
@@ -31,6 +31,9 @@
         padding-bottom: 32px;
         margin-left: 88px;
     }
+    @media screen and (min-width:1200px) {
+        margin-left: 93px;
+    }
 }
 
 
@@ -38,7 +41,7 @@
     content: '';
     display: block;
     position: relative;
-    bottom: -26px;
+    bottom: -32px;
     height: 4px;
     border-radius: 2px;
     background-color: #2196f3;
@@ -74,6 +77,11 @@
     color: #757575;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width:1200px){
+        font-size: 14px;
+        line-height: 16px;
+    }
+
     &:hover{
         color: #2196F3;
     }
@@ -88,14 +96,23 @@
     display: block;
     padding-top: 21px;
     margin-left: 84px;
+    @media screen and (min-width:1200px) {
+        display: flex;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        margin-left: 305px;
+    }
 }
 
-// .connect__contacts:not(:last-child){
-//     margin-right: 50px;
-// }
-   
 
-
+.connect__contacts{
+    @media screen and (min-width:1200px){
+        &:not(:last-child){
+            margin-right: 50px;
+            margin-bottom: 0;
+        }
+    }
+}
 
 .connect__icon{
     margin-right: 8px;
@@ -117,6 +134,7 @@
     letter-spacing: 0.03em;
     
     @media screen and (min-width:1200px) {
+        margin-right: 0;
         font-weight: 700;
         font-size: 24px;
         line-height: 1.19;
