--- a/sass/styles.scss/layout/_footer.scss
+++ b/sass/styles.scss/layout/_footer.scss
@@ -18,6 +18,12 @@
     
 }
 
+.footer-wrap{
+    @media screen and (min-width:1200px){
+        display: flex;
+    }
+}
+
 .footer-logo{
     display: block;
     margin-bottom: 20px;
@@ -37,16 +43,25 @@
     color: #FFFFFF;
     display: block;
     text-align: center;
+    @media screen and (min-width:1200px){
+        text-align: left;
+    }
 }
 
 .footer-item {
-    // display: block;
-    // margin-bottom: 9px;
+    @media screen and (min-width:768px) and (max-width:1199px){
+        &:not(:last-child){
+            margin-bottom: 8px;
+        }
+    }
+
+    @media screen and (min-width:1200px) {
+        display: block;
+        margin-bottom: 9px;
+    }
+    
 }
 
-.footer-item:not(:last-child){
-    margin-bottom: 8px;
-}
 
 .footer-link{
     font-family: 'Roboto';
@@ -58,6 +73,9 @@
     color: rgba(255, 255, 255, 0.6);
     text-align: center ;
     display: block;
+    @media screen and (min-width:1200px){
+        text-align: left;
+    } 
 }
 
 .join{
@@ -120,7 +138,8 @@
 
 .subscribe{
     @media screen and (min-width:1200px){
-       margin-left: auto; 
+       margin-left: 93px; 
+       padding-top: 10px;
     }
     
 }
@@ -139,11 +158,15 @@
     text-align: center;
     @media screen and (min-width:1200px){
         text-align: left;
+        display: flex;
     }
 }
 
 .subscribe-cont{
     display: block;
+    @media screen and (min-width:1200px){
+        display: flex;
+    }
 }
 
 
@@ -203,13 +226,10 @@
     fill: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     @media screen and (min-width:1200px){
+        height: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-left: 29px;
-        padding-right: 28px;
-        padding-top: 10px;
-        padding-bottom: 10px;
         margin-left: 12px;
     }
     
