--- a/sass/styles.scss/layout/_team.scss
+++ b/sass/styles.scss/layout/_team.scss
@@ -35,7 +35,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     
     @media screen and (min-width:768px) and (max-width:1199px) {
-        width: 354px;
+        min-width: 354px;
         flex-basis: calc(100% / 2 - 30px);
         margin-right: 30px;
         margin-bottom: 30px;
