--- a/sass/styles.scss/layout/_header.scss
+++ b/sass/styles.scss/layout/_header.scss
@@ -48,8 +48,8 @@
 
 
 .header-hero__link{
-    // padding-top: 32px;
-    // padding-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
