--- a/css/main.css
+++ b/css/main.css
@@ -73,13 +73,30 @@ ul {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
-  min-height: 581px;
+  max-width: 450px;
+  max-height: 95%;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 95%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+    height: 581px;
+    overflow-y: unset;
+  }
 }
 
 .modal-icon-close {
@@ -1139,8 +1156,9 @@ ul {
 }
 
 .header-hero__link {
+  display: block;
   padding-top: 32px;
-  padding-bottom: 32px;
+  padding-bottom: 31px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
