--- a/sass/portfolio.scss/layout/_footer.scss
+++ b/sass/portfolio.scss/layout/_footer.scss
@@ -5,13 +5,33 @@
 }
 
 .footer-flex{
-    display: flex;
-    align-items: baseline;
+    @media screen and (min-width:768px){
+        display: flex;
+        align-items: baseline;
+        justify-content: space-around;
+        margin-bottom: 60px;
+    }
+    @media screen and (min-width:1200px){
+        display: flex;
+        align-items: baseline;
+        margin-bottom: 0;
+    }
+    
+}
+
+.footer-wrap{
+    @media screen and (min-width:1200px){
+        display: flex;
+    }
 }
 
 .footer-logo{
     display: block;
     margin-bottom: 20px;
+    text-align: center;
+    @media screen and (min-width:1200px){
+        text-align: left;
+    }
 }
 
 .footer-position{
@@ -22,13 +42,27 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #FFFFFF;
+    display: block;
+    text-align: center;
+    @media screen and (min-width:1200px){
+        text-align: left;
+    }
 }
 
 .footer-item {
-    display: block;
-    margin-bottom: 9px;
+    @media screen and (min-width:768px) and (max-width:1199px){
+        &:not(:last-child){
+            margin-bottom: 8px;
+        }
+    }
+
+    @media screen and (min-width:1200px) {
+        display: block;
+        margin-bottom: 9px;
+    }
     
 }
+
 
 .footer-link{
     font-family: 'Roboto';
@@ -38,10 +72,24 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    text-align: center ;
+    display: block;
+    @media screen and (min-width:1200px){
+        text-align: left;
+    } 
 }
 
 .join{
-    margin-left: 70px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    @media screen and (min-width:768px){
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    @media screen and (min-width:1200px){
+        margin-left: 70px;
+    }
+    
 }
   
 .join-title{
@@ -50,6 +98,10 @@
     text-transform: uppercase;
     color: #ffffff;
     margin-bottom: 20px ;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+        text-align: left;
+    }
 }
   
 .join-list{
@@ -61,6 +113,8 @@
 .join-item + .join-item{
     margin-left: 10px;
 }
+
+
   
 .join-link{
     width: 44px;
@@ -80,14 +134,19 @@
         background-color: #2196f3;
     }
 }
+  
 
 
 .subscribe{
-    margin-left: 93px;
+    @media screen and (min-width:1200px){
+       margin-left: 93px; 
+       padding-top: 10px;
+    }
+    
 }
 
 .subscribe-title{
-    display: flex;
+    display: block;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -96,17 +155,32 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
+    margin-bottom: 20px;
+    text-align: center;
+    @media screen and (min-width:1200px){
+        text-align: left;
+        display: flex;
+    }
 }
 
+.subscribe-cont{
+    display: block;
+    @media screen and (min-width:1200px){
+        display: flex;
+    }
+}
+
+
 .subscribe-input{
-    padding-left: 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
     background-color: transparent;
     outline: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     color: rgba(255, 255, 255, 0.6);
+    margin-bottom: 20px;
+    
     &::placeholder{
         font-family: 'Roboto';
         font-style: normal;
@@ -114,28 +188,71 @@
         font-size: 16px;
         line-height: 1.25;
         color: rgba(255, 255, 255, 0.6);
+        
+    }
+
+    @media screen and (min-width:768px) {
+        display: block;
+        width: 450px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media screen and (min-width:1200px){
+        display: inline;
+        padding-left: 16px;
+        width: 358px;
     }
 }
 
 
 
 .subscribe-btn{
-    margin-left: 12px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 29px;
     padding-right: 28px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: #2196f3;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    cursor: pointer;
     border-color: transparent;
     border-radius: 4px;
-    fill: currentColor;
+    fill: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    @media screen and (min-width:1200px){
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 12px;
+    }
+    
 }
 
 .subscribe-send{
-    margin-left: 10px;
     vertical-align: middle;
+    @media screen and (min-width:1200px){
+        margin-left: 10px;
+    }
 }
 
-
-
+.logo-footer-start{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+}
 
 .logo-footer-end{
     font-family: 'Raleway';
