--- a/sass/portfolio.scss/layout/_section.scss
+++ b/sass/portfolio.scss/layout/_section.scss
@@ -1,131 +1,190 @@
-.section{
-    padding-top: 94px;
-    padding-bottom: 94px;
+.works {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    &__btn:hover,
+    &__btn:focus {
+        background:  #2196f3;
+        color: #ffffff;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
+
+    @media screen and (min-width:1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
-
-
-.section-main-list{
+.works__list {
     display: flex;
-    margin-bottom: 50px;
-    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+
+    @media screen and (min-width:768px) {
+        margin-bottom: 30px;
+        justify-content: center;
+    }
+    @media screen and (min-width:1200px){
+        margin-bottom: 50px;
+    }
 }
 
-.section-list-item:not(:last-child){
+.works__item{
+    margin-bottom: 15px;
+    @media screen and (min-width:768px){
+        margin-bottom: 0;
+    }
+}
+
+.works__item:not(:last-child) {
     margin-right: 8px;
 }
 
-.btn-item{
-    
-    font-family: 'Roboto';
-    font-style: normal;
-    background: #f5f4fa;
-    color: #212121;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    cursor: pointer;
+.works__btn {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     padding-top: 6px;
     padding-right: 22px;
     padding-bottom: 6px;
     padding-left: 22px;
     border-radius: 4px;
     border: #f5f4fa;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover{
-        background-color: #2196f3;
-        color: #FFFFFF;
-    }
-    &:focus{
-        background-color: #2196f3;
-        color: #FFFFFF;
-    }
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+
+    background: #f5f4fa;
+    color: #212121;
 }
 
+.gallery {
+    margin-bottom: calc(-1 * 30px);
+    
 
+    &__link:hover,
+    &__link:focus {
+        display: block;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 
-.work-list{
-    display: flex;
-    flex-wrap: wrap;
+    @media screen and (min-width:768px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin-right: calc(-1 * 30px);
+    }
 }
-
-.work-item{
-    flex-basis: calc(100% / 3 - 30px);
-    margin-right: 30px;
+.gallery__item {
+    max-width: 450px;
     margin-bottom: 30px;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover{
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
+    @media screen and (min-width:768px){
+        flex-basis: calc(100% / 2 - 30px);
+        margin-right: 30px;
+        display: flex;
     }
-    &:focus{
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
+    @media screen and (min-width:1200px){
+        flex-basis: calc(100% / 3 - 30px);
     }
 }
 
+.gallery__link {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width:768px) {
+        display: flex;
+        flex-direction: column;
+    }
+}
 
-
-.masters-cover-wrap{
+.gallery__wrap {
     position: relative;
     overflow: hidden;
 }
 
-.work-cover-text{
-    height: 100%;
+.gallery__cover-text {
+    transform: translateY(101%);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(33, 150, 243, 0.9);
-    color: #FFFFFF;
+    height: 294px;
+    padding-top: 39px;
+    padding-right: 24px;
+    padding-bottom: 29px;
+    padding-left: 24px;
+
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
-    padding: 63px 24px 63px 24px;
-    transform: translateY(100%);
-    transition: transform 500ms;
-    .work-item:hover &{
-        transform: translate(0%);
+
+    background-color: rgba(33, 150, 243, 0.9);
+    color: #ffffff;
+
+    .gallery__link:hover &,
+    .gallery__link:focus & {
+        transform: translateY(0);
+    }
+
+    @media screen and (max-width:380px) {
+        padding-top: 29px;
+        padding-bottom: 29px;
+    }
+
+    @media screen and (min-width:768px){
+        padding-top: 49px;
+        padding-bottom: 77px;
+    }
+
+    @media screen and (min-width:1200px){
+        padding-top: 63px;
+        padding-bottom: 63px;
     }
 }
 
-
-
-.third{
-    margin-right: -30px;
-}
-
-.work-text{
-    border-left: 1px solid #EEEEEE;
-    border-right: 1px solid #EEEEEE;
-    border-bottom: 1px solid #EEEEEE;
+.gallery__ptext {
     padding-top: 20px;
     padding-right: 24px;
     padding-bottom: 20px;
     padding-left: 24px;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+    flex-grow: 1;
 }
 
-.work-title{
+.gallery__capt {
+    color: #212121;
+
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    color: #212121;
     margin-bottom: 4px;
 }
 
-.work-category{
+.gallery__text {
+    color:#757575;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    color: #757575;
 }
