--- a/sass/styles.scss/components/_modal.scss
+++ b/sass/styles.scss/components/_modal.scss
@@ -12,14 +12,28 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 528px;
-    min-height: 581px;
+    max-width: 450px;
+    max-height: 95%;
     background-color: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 40px;
+
+    @media screen and (max-width:767px){
+        width: 95%;
+    }
+
+    @media screen and (min-width:768px){
+        width: 100%;
+    }
+
+    @media screen and (min-width:1200px){
+        max-width: 528px;
+        height: 581px;
+        overflow-y: unset;
+    }
 }
   
 .modal-icon-close{
