--- a/sass/styles.scss/layout/_header.scss
+++ b/sass/styles.scss/layout/_header.scss
@@ -48,8 +48,9 @@
 
 
 .header-hero__link{
+    display: block;
     padding-top: 32px;
-    padding-bottom: 32px;
+    padding-bottom: 31px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
