--- a/sass/poftfoliou.scss
+++ b/sass/poftfoliou.scss
@@ -11,3 +11,4 @@
 @import "./styles.scss/components/mob-menu";
 @import "./styles.scss/utils/hidden";
 @import "./styles.scss/utils/vars";
+@import "./styles.scss/components/container";
