--- a/sass/styles.scss/layout/_benefits.scss
+++ b/sass/styles.scss/layout/_benefits.scss
@@ -50,7 +50,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 24/14;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: #757575;
     max-width: 450px;
