--- a/css/main.css
+++ b/css/main.css
@@ -268,10 +268,16 @@ ul {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 11px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .check-text, .check-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .icon-check {
@@ -409,13 +415,6 @@ ul {
       flex-wrap: wrap;
   margin-top: 64px;
 }
-@media screen and (orientation: landscape) {
-  .mob-menu-soc__list {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-}
 @media screen and (max-width: 479px) {
   .mob-menu-soc__list {
     -ms-flex-pack: distribute;
@@ -433,6 +432,16 @@ ul {
 }
 
 .mob-menu-soc__link {
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
   color: #2196F3;
 }
 .mob-menu-soc__link:hover, .mob-menu-soc__link:focus {
@@ -512,6 +521,14 @@ ul {
   margin-bottom: 30px;
   margin-right: auto;
   margin-left: auto;
+}
+@media screen and (min-width: 1200px) {
+  .begin__title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    max-width: 696px;
+  }
 }
 
 .begin__btn {
@@ -596,7 +613,7 @@ ul {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24/14;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
   max-width: 450px;
@@ -676,18 +693,25 @@ ul {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients-title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .clients-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 50px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-pack: center;
@@ -709,6 +733,12 @@ ul {
   margin-bottom: 30px;
   margin-left: 30px;
 }
+.clients-item:nth-child(5) {
+  margin-bottom: 0;
+}
+.clients-item:nth-child(6) {
+  margin-bottom: 0;
+}
 @media screen and (min-width: 768px) {
   .clients-item {
     width: calc(33.3333333333% - 30px);
@@ -717,6 +747,7 @@ ul {
 @media screen and (min-width: 1200px) {
   .clients-item {
     width: 100%;
+    margin-bottom: 0;
   }
 }
 
@@ -1309,21 +1340,30 @@ ul {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .team-title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .team-item {
   max-width: 450px;
-  margin-bottom: 30px;
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.team-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-item {
@@ -1345,6 +1385,7 @@ ul {
 }
 @media screen and (min-width: 1200px) {
   .team-item {
+    margin-bottom: 0;
     margin-right: 30px;
     width: 270px;
     -ms-flex-preferred-size: calc(25% - 30px);
@@ -1444,7 +1485,6 @@ ul {
 
 .work {
   display: none;
-  padding-top: 94px;
   padding-bottom: 94px;
 }
 @media screen and (min-width: 1200px) {
