--- a/sass/styles.scss/components/_modal.scss
+++ b/sass/styles.scss/components/_modal.scss
@@ -160,10 +160,14 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 11px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: #757575;
+    @media screen and (min-width:1200px){
+        font-size: 14px;
+        line-height: 1.71;
+    }
 }
 
 
