--- a/sass/styles.scss/layout/_begin.scss
+++ b/sass/styles.scss/layout/_begin.scss
@@ -62,6 +62,13 @@
     margin-bottom: 30px;
     margin-right: auto;
     margin-left: auto;
+
+    @media screen and (min-width:1200px){
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        max-width: 696px;
+    }
 }
    
 .begin__btn{
