--- a/sass/styles.scss/layout/_clients.scss
+++ b/sass/styles.scss/layout/_clients.scss
@@ -21,16 +21,21 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
+    margin-bottom: 30px;
+    @media screen and (min-width:1200px){
+        font-size: 36px;
+        line-height: 1.17;
+        margin-bottom: 50px;
+    }
 }
 
 .clients-list{
     display: flex;
-    margin-top: 50px;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: -30px;
@@ -46,11 +51,18 @@
     width: calc(100% / 2 - 30px);
     margin-bottom: 30px;
     margin-left: 30px;
+    &:nth-child(5){
+        margin-bottom: 0;
+    }
+    &:nth-child(6){
+        margin-bottom: 0;
+    }
     @media screen and (min-width:768px){
         width: calc(100% / 3 - 30px);
     }
     @media screen and (min-width:1200px){
         width: 100%;
+        margin-bottom: 0;
     }
 }
 
