--- a/sass/styles.scss/layout/_team.scss
+++ b/sass/styles.scss/layout/_team.scss
@@ -19,21 +19,29 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    @media screen and (min-width:1200px){
+        font-size: 36px;
+        line-height: 1.17;
+        margin-bottom: 50px;
+    }
 }
 
 .team-item{
     max-width: 450px;
-    margin-bottom: 30px;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     
+    &:not(:last-child){
+        margin-bottom: 30px;
+    }
+
     @media screen and (min-width:768px) and (max-width:1199px) {
         min-width: 354px;
         flex-basis: calc(100% / 2 - 30px);
@@ -51,6 +59,7 @@
     }
      
     @media screen and (min-width:1200px) {
+        margin-bottom: 0;
         margin-right: 30px;
         width: 270px;
         flex-basis: calc(100% / 4 - 30px);
