--- a/css/poftfoliou.css
+++ b/css/poftfoliou.css
@@ -410,7 +410,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .footer-flex {
+  .footer-wrap .footer-flex {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -422,18 +422,6 @@
     margin-bottom: 60px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .footer-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-    margin-bottom: 0;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .footer-wrap {
     display: -webkit-box;
